Bug #19097
segv in MonClient::build_authorizer(int)
% Done:
0%
Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
3: 0> 2017-02-27 14:22:37.718459 7f0e6f7fe700 -1 *** Caught signal (Segmentation fault) ** 3: in thread 7f0e6f7fe700 thread_name:rados 3: 3: ceph version 12.0.0-842-gdf3bc64 (df3bc645327f6edfc8d3e7007cb22af713237755) 3: 1: (()+0x56f12) [0x55a8e639bf12] 3: 2: (()+0x115c0) [0x7f0e811875c0] 3: 3: (MonClient::build_authorizer(int) const+0x4f) [0x7f0e81650cdf] 3: 4: (librados::RadosClient::ms_get_authorizer(int, AuthAuthorizer**, bool)+0x12) [0x7f0e8a244bd2] 3: 5: (AsyncConnection::_process_connection()+0x81f) [0x7f0e817325bf] 3: 6: (AsyncConnection::process()+0x7a8) [0x7f0e81737778] 3: 7: (EventCenter::process_events(int)+0x9b1) [0x7f0e8174a2b1] 3: 8: (()+0x3bae31) [0x7f0e8174ee31] 3: 9: (()+0xbb35f) [0x7f0e7f65b35f]
I gets this from maybe 1/3 of runs of 'ctest -R ceph_objectstore_tool -V'.
Related issues
History
#1 Updated by David Zafman almost 6 years ago
Nothing too notable. A rados put crashed after a rados mksnap. Because we don't see the experimental features warning it could be the first one.
2/161 Test #3: ceph_objectstore_tool.py ................***Failed 32.78 sec
vstarting....DONE
Wait for health_ok...DONE
Created Replicated pool #1
Created Erasure coded pool #2
Creating 4 objects in replicated pool
2017-02-25 19:07:21.489373 7f72187338c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:21.489723 7f72187338c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:21.492738 7f72187338c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:21.570137 7f436dca48c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:21.570251 7f436dca48c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:21.572433 7f436dca48c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:21.644098 7f70fec2b8c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:21.644345 7f70fec2b8c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:21.646936 7f70fec2b8c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:21.926451 7f39a3f5b8c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:21.926718 7f39a3f5b8c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:21.928723 7f39a3f5b8c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:21.965387 7f1567f8b8c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:21.965608 7f1567f8b8c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:21.966863 7f1567f8b8c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:22.013499 7f088d5aa8c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:22.033625 7f088d5aa8c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:22.035975 7f088d5aa8c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:22.088257 7fb6ef92a8c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:22.088359 7fb6ef92a8c0 -1 WARNING: all dangerous and experimental features are enabled.
2017-02-25 19:07:22.089852 7fb6ef92a8c0 -1 WARNING: all dangerous and experimental features are enabled.
created pool rep_pool snap snap1
CRITICAL:Rados put command failed with 139
#2 Updated by David Zafman almost 6 years ago
From code inspection I'm a suspicious of this change that merge on Feb 14:
commit a2eb6ae3fb57b09efdd4d7baac6871ca8dd8e79f Author: Kefu Chai <kchai@redhat.com> Date: Wed Sep 14 21:39:04 2016 +0800 mon/monclient: hunt for multiple monitor in parallel * add an option "mon_client_hunt_parallel" for the maxmimum number of parallel hunting sessions. Fixes: http://tracker.ceph.com/issues/16091 Signed-off-by: Steven Dieffenbach <sdieffen@redhat.com> Signed-off-by: Kefu Chai <kchai@redhat.com>
#3 Updated by Kefu Chai almost 6 years ago
- Assignee set to Kefu Chai
#4 Updated by Kefu Chai almost 6 years ago
- Status changed from 12 to Fix Under Review
#5 Updated by Sage Weil almost 6 years ago
- Status changed from Fix Under Review to Resolved
#6 Updated by Kefu Chai almost 6 years ago
- Duplicated by Bug #18979: [ceph-mon] create-keys:Cannot get or create admin key added